plugins {
    id 'java'
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '2.3.21'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

javafx {
    version = '21.0.3'
    modules = ['javafx.controls', 'javafx.fxml']
}

java {
}

group = 'org.example'
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jline:jline:3.29.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.22.1'
    implementation 'org.postgresql:postgresql:42.7.1'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

tasks.withType(Jar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

task clientJar(type: Jar) {
    archiveBaseName = 'client'
    archiveVersion = '1.0'
    manifest {
        attributes 'Main-Class': 'org.example.client.Client'
    }
    from sourceSets.main.output
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'org/example/server/**'
    exclude 'org/example/gui/**'
}

task serverJar(type: Jar) {
    archiveBaseName = 'server'
    archiveVersion = '1.0'
    manifest {
        attributes 'Main-Class': 'org.example.server.Server'
    }
    from sourceSets.main.output
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'org/example/client/**'
    exclude 'org/example/gui/**'
}

task buildClient {
    dependsOn clientJar
}

task buildServer {
    dependsOn serverJar
}

task clientGuiJar(type: Jar) {
    archiveBaseName = 'client-gui'
    archiveVersion = '1.0'
    manifest {
        attributes 'Main-Class': 'org.example.gui.Main'
    }
    from sourceSets.main.output
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'org/example/server/**'
    exclude 'org/example/client/**'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from {
        project.sourceSets.main.runtimeClasspath.findAll {
            it.name.contains('javafx') || it.name.contains('javafx-base') || it.name.contains('javafx-controls') || it.name.contains('javafx-fxml')
        }.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

task buildGui {
    dependsOn clientGuiJar
}

task buildAll {
    dependsOn clientJar, serverJar, clientGuiJar
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}
kotlin {
    jvmToolchain(17)
}

task runGui(type: JavaExec) {
    mainClass = 'org.example.gui.Main'
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}